test/errors/traits/ambiguous_instances/main.sk
module Main {

class Foo {

}

trait Bar[T] {
    fn bar(self) -> ()
}

instance[T] Bar[T] {
    fn bar(self) -> () {

    }
}

instance[Q] Bar[Q] {
    fn bar(self) -> () {

    }
}

fn main() {
    let f = Foo();
    f.bar();
}

}